<resources>
    <string name="app_name">Zlele</string>
    <string name="happyday">좋은 하루 되세요!</string>
    <string name="attend">출결 현황</string>
    <string name="score">이수 학점</string>
    <string name="info">러러</string>
    <string name="action_Attend">출결 정보</string>
    <string name="action_Score">이수 학점</string>
    <string name="action_Info">My Page</string>
    <string name="action_Teacher_Info">교수 정보</string>
    <string name="action_menu">Menu</string>
    <string name="pro_name">Chenle</string>
    <string name="pro_major">Cute</string>
    <string name="pro_email">-</string>
    <string name="pro_office">NCT_DREAM</string>
    <string name="write">작성</string>
</resources>
