<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poor"
        android:text="@string/happyday"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_Attend"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        android:drawableTop="@mipmap/ic_alarm_on_black_48dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poor"
        android:text="@string/attend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_Score"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        android:drawableTop="@mipmap/ic_subject_black_48dp"
        android:fontFamily="@font/poor"
        android:text="@string/score"
        app:layout_constraintStart_toEndOf="@+id/btn_Attend"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_Info"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#FFFFFF"
        android:drawableTop="@mipmap/ic_account_circle_black_48dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/poor"
        android:text="@string/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Score"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_menu_black_48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>